--- a/.cargo/config
+++ b/.cargo/config
@@ -1,8 +1,8 @@
-[target.thumbv6m-none-eabi]
-runner = 'gdb-multiarch'
+[target.thumbv7em-none-eabi]
+runner = 'gdb'
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
 
 [build]
-target = "thumbv6m-none-eabi"
+target = "thumbv7em-none-eabi"
