Round-trip works - hitting the http-endpoint from the stm32 device
Currently very ugly and procedural with lots of hard-coded values.

Requires a port forward:
  kubectl port-forward --address 0.0.0.0 svc/kourier -n kourier-system 8080:80

And the host header must be set for proper ingress routing:
  .headers(&[("Host", "http-endpoint.drogue-iot.10.109.177.179.nip.io"), ("Content-Type", "text/json")])

The latter is available in the output from ./hack/status.sh

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rtt-logger = "0.1.0"
 log = "0.4.11"
 drogue-network = "0.2.0"
 drogue-esp8266 = "0.3.0"
+drogue-http-client = "0.0.2"
 heapless = "0.5.5"
 
 [profile.release]
