--- a/Embed.toml
+++ b/Embed.toml
@@ -51,7 +51,7 @@ timeout = 3000
 # Whether timestamps in the RTTUI are enabled
 show_timestamps = true
 # Whether to save rtt history buffer on exit.
-log_enabled = false
+log_enabled = true
 # Where to save rtt history buffer relative to manifest path.
 log_path = "./logs"
 
